www/styles/scss/fort.scss
/*- Reset Styles -----------------------------------------------------------*/


  html, body, div, span, applet, object, iframe, h1, h2, h4, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, 
  cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, 
  ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, hr, button, header, footer
  {margin:0; padding:0; border:0; outline:0; font-size:100%; vertical-align: baseline; background:transparent; box-sizing:border-box;}   
  ol, ul {list-style:none;}
  h1, h2, h4, h4, h5, h6, li {line-height:100%;}
  blockquote, q {quotes:none;}
  table {border-collapse:collapse; border-spacing:0;}
  input, textarea, button {font-family:inherit; font-size:1em;}
  textarea {overflow:auto;}


/*-----------------------------------------------------------------------------------------------*/

/*- Import columns ---------------------------------------------------------*/

  
  @import "_ocssipital.scss";


/*-----------------------------------------------------------------------------------------------*/

/*- General ----------------------------------------------------------------*/


  body {
    background:#FFF url(../../assets/images/ricky.jpg) no-repeat 100% 0 fixed;
    font:100% Arial, Helvetica, sans-serif;
  }

  h1, .audio strong {
    font-family:'Playball', Arial, Helvetica, sans-serif;
  }

  .wrap {
    width:90%;
    max-width:1200px;
    margin:0 auto;
  }

  .header {

    padding:50px 0 0 10px;

    h1 {
      font-size:4em;
      padding-bottom:10px;
    }

    p {
      color:#666;
    }

  }

  ul {
    padding:40px 0 30px;
  }

  a {

    text-decoration:none;
    font-size:0.75em;
    color:#666;

    &:hover {
      color:#000;
      text-decoration:underline;
    }

  }

  .audio {
    
    text-align:center;
    overflow:hidden;
    padding:20px 0;
    margin-bottom:20px;
    background:#FFF;
    transition:all 0.3s;
    box-shadow:0 0 1px 1px rgba(0,0,0,0.1);

    &:hover {
      box-shadow:0 0 1px 1px rgba(0,0,0,0.3);
    }

    button {
      display:inline-block;
      position:relative;
      cursor:pointer;
      margin:0 auto;
      width:100px;
      height:100px;
      background-image:url(../../assets/images/button.png);
      background-repeat:no-repeat;
      background-size:100px 100px;

      span {
        display:none;
        width:86px;
        height:82px;
        background:rgba(0,0,0,0.3);
        border-radius:82px;
        text-indent:-9999em;
        font-size:0;
        position:absolute;
        left:7px;
        top:3px;
        z-index:1;
      }

      &:active {

        position:relative;
        top:2px;

        span {
          display:block;
        }

      }

    }

    strong {
      display:block;
      font-size:1.25em;
      line-height:120%;
      min-height:80px;
      padding:20px 0 12px;
    }

  }

  $audios: 50;
  @while $audios > 0 {
    .audio-#{$audios} button {
      background-color:hsla(random(365), 90, 50, 1);
    }
    $audios: $audios - 1;
  }

  .footer {

    p {
      color:#666;
      line-height:130%;
      font-size:0.75em;
      display:inline-block;
      background:#EEE;
      padding:8px 20px;
      border-radius:30px;
      margin:0 0 40px 10px;
    }

    a {
      font-size:1em;
    }

  }

  @include mediaquery(s){
    
    body {
      background-image:none;
    }

    .audio strong {
      min-height:0;
    }
    
    .footer p {
      text-align:center;
    }

  }

